--- a/photobloger/templates/photobloger/index.html
+++ b/photobloger/templates/photobloger/index.html
@@ -1,7 +1,7 @@
 {% extends 'photobloger/base.html' %}
 {% block content %}
-<div class="container">
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+<div id="carouselExampleIndicators" class="carousel slide mt-5" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -61,5 +61,4 @@
   {% endfor %}
     <hr class="featurette-divider">
     <!-- /END THE FEATURETTES -->
-  </div>
 {% endblock %}
